fixed language switch on mobile

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -52,13 +52,17 @@ nav.scrolled .fab {
     content: 'EN';
 }
 
+.language-switcher {
+    position: relative;
+}
+
 .language-switcher::after {
     position: absolute;
     font-size: 0.75rem;
     font-family: 'Lato', sans-serif;
     font-weight: 400;
 
-    right: -12px;
+    right: -1.2rem;
     transition: all 200ms ease-in-out;
 }
 
